Added to be mobile responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container" id="myReps">
         <div class="row">
             <!-- Representative -->
-            <div class="col-4" id="rep">
+            <div class="col-4-sm" id="rep">
                 <h2>Representative</h2>
 
                 <div id="repName">
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Senator1 -->
-            <div class="col-4" id="senOne">
+            <div class="col-sm-4" id="senOne">
                 <h2>Senator1</h2>
 
                 <div id="repName">
@@ -72,7 +72,7 @@
             </div>
 
             <!-- Senator2 -->
-            <div class="col-4" id="senTwo">
+            <div class="col-sm-4" id="senTwo">
                 <h2>Senator2</h2>
 
                 <div id="repName">
