adds MDB library and initial UI

--- a/repMDB.html
+++ b/repMDB.html
@@ -101,7 +101,7 @@
                     <h5 class="card-subtitle" id="repParty">Party</h5>
 
                     <!--Text-->
-                    <p class="card-text" id="dateElect">Date Electied</p>
+                    <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
                     <p class="card-text" id="contactNum">Contact Number</p>
@@ -133,7 +133,7 @@
                     <h5 class="card-subtitle" id="senOneParty">Party</h5>
 
                     <!--Text-->
-                    <p class="card-text" id="dateElect">Date Electied</p>
+                    <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
                     <p class="card-text" id="contactNum">Contact Number</p>
@@ -164,7 +164,7 @@
                     <h5 class="card-subtitle" id="senTwoParty">Party</h5>
 
                     <!--Text-->
-                    <p class="card-text" id="dateElect">Date Electied</p>
+                    <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
                     <p class="card-text" id="contactNum">Contact Number</p>
