--- a/repMDB.html
+++ b/repMDB.html
@@ -185,9 +185,12 @@
     <!-- =========================================================== End My Representatives Section ======================================================-->
 
 
+    <!-- =========================================================== Top News Stories Section ======================================================-->
 
 
+<!-- Start Top News Stories-->
 
+<div id="topStories"></div>
 
 
 
