--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!--Footer-->
                 <div class="modal-footer flex-center">
                      
-                        <a href="repMDB.html" class="btn" role="button">Search</a>
+                        <a href="repMDB.html" class="btn" id="search-button"role="button">Search</a>
 
                     <form >
                         <select class="design">
