--- a/repMDB.html
+++ b/repMDB.html
@@ -104,7 +104,7 @@
                     <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
-                    <p class="card-text" id="contactNum">Contact Number</p>
+                    <p class="card-text" id="RepContactNum">Contact Number</p>
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <button type="button" class="btn btn-light-blue btn-md">Read more</button>
 
@@ -136,7 +136,7 @@
                     <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
-                    <p class="card-text" id="contactNum">Contact Number</p>
+                    <p class="card-text" id="senOneContactNum">Contact Number</p>
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <button type="button" class="btn btn-light-blue btn-md">Read more</button>
 
@@ -167,7 +167,7 @@
                     <p class="card-text" id="dateElect">Date Elected</p>
                     <p class="card-text" id="district">District</p>
                     <p class="card-text" id="townName">Town Name</p>
-                    <p class="card-text" id="contactNum">Contact Number</p>
+                    <p class="card-text" id="senTwoContactNum">Contact Number</p>
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <button type="button" class="btn btn-light-blue btn-md">Read more</button>
 
