--- a/repMDB.html
+++ b/repMDB.html
@@ -142,7 +142,7 @@
                     <button type="button" class="btn btn-color btn-md">Read more</button>
                     <hr>
                     <div class="box">
-                    <img class="twitter" id="RepTwitter" src= "assets/images/twitterimg.png">
+                    <img class="twitter" id="SenTwitter" src= "assets/images/twitterimg.png">
                         </div>
 
 
@@ -176,7 +176,7 @@
                     <button type="button" class="btn btn-color btn-md">Read more</button>
                     <hr>
                     
-                    <img class="twitter" id="RepTwitter" src= "assets/images/twitterimg.png">
+                    <img class="twitter" id="SenTwitter" src= "assets/images/twitterimg.png">
                         </div>
 
 
