--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
 <!-- AJAX CAll -->
-<script>
+<!-- <script>
     /*
 
 AJAX calls the specific member of senate 
@@ -228,7 +228,7 @@ $.ajax({
 // });
 
 
-</script>
+</script> -->
 
 
 
