changes color of nav bar in the repMDB.html file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">bills</a>
+                    <a class="nav-link" href="#">Bills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Future Updates</a>
