--- a/repMDB.html
+++ b/repMDB.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="#">Bills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Future updates</a>
+                    <a class="nav-link" href="#">Future Updates</a>
                 </li>
             </ul>
             <!-- Links -->
