--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                                         <option value="Iowa">Iowa</option>
                                         <option value="Kansas">Kansas</option>
                                         <option value="Kentucky">Kentucky</option>
-                                        <option value="Lousiana">Lousiana</option>
+                                        <option value="Louisiana">Louisiana</option>
                                         <option value="Maine">Maine</option>
                                         <option value="Maryland">Maryland</option>
                                         <option value="Massachusetts">Massachusetts</option>
                                         <option value="Michigan">Michigan</option>
                                         <option value="Minesota">Minesota</option>
-                                        <option value="Missippi">Missippi</option>
+                                        <option value="Mississippi">Mississippi</option>
                                         <option value="Missouri">Missouri</option>
                                         <option value="Montana">Montana</option>
                                         <option value="Nebraska">Nebraska</option>
