adds dynamic search criteria to the newyork times api and inplements a loading gif for the user to watch while waiting for the state representatives data to appear

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                                 <i class="fa fa-search fa-4x animated rotateIn"></i>
 
-                                <p>
+                                <p id="select">
                                     <strong>Select a state and click search</strong>
                                 </p>
 
